# unleash

./: .dockerignore  .gitignore  .gitmodules  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  JSON_OUTPUT.md  LICENSE  MAKEOVER_REPORT.md  Makefile  README.md  Strategic_Vision_Future_Directions.md  V5_PLAN.md  audit_scratchpad.md  build.rs  demo-animation.tape  demo-tui.tape  deny.toml  patch_gemini.js  patch_gemini2.js  print_claude.rs  release-please-config.json  test-json-feature.sh  test_gemini.js  test_gemini_fix.sh
.cargo/: config.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: actionlint.yml  assignment-trigger.yml  audit.yml  binary-smoke-test.yml  canary-release.yml  canary-sync.yml  coverage.yml  docker-build.yml  docker-publish.yml  flake-check.yml  integration-tests.yml  lint.yml  memory-profile.yml  mention-trigger.yml  pages.yml  release-please.yml  setup-check.yml  sync-upstream.yml  trailer-hygiene.yml  tui-release.yml  update-codex-submodule.yml  upload-release-binaries.yml
.unleashed/: extensions.json
.unleashed/scripts/: test-restart-refresh.sh
assets/ansi/: ct4-right.ans
assets/vhs/: demo-animation.tape  demo-theme.tape  demo-tui.tape  demo.tape
client-patch/: PATCHES.md
client-patch/scripts/: check-and-patch.sh  patch-claude.sh
codex-unleashed/: README.md  config.toml
configs/: README.md
data/: versions.json
docker/: Dockerfile  Dockerfile.cuda  NETWORKING.md  README.md  docker-compose.cuda.yml  docker-compose.gpu.yml  docker-compose.local-api.yml  docker-compose.multi-agent.yml  docker-compose.runc.yml  docker-compose.unsandboxed.yml  docker-compose.yml  entrypoint.sh  example.env  sandbox-network.sh  setup-vast-template.sh  starship.toml
docs/: DOCUMENTATION_MAP.md  PATCHES.md  README.md  WHITELISTING.md  auth-check-command.md  cli-reference.md  configuration.md  crossload-matrix.md  crossload.md  custom-agents.md  docker.md  environment-variables.md  getting-started.md  plugins.md  profiles.md  qa-test-plan-chat-log-portability.md  skillsync-matrix.md  skillsync.md  sync-process.md
docs/benchmarks/: README.md  blog-deck.html  overhead-2026-06-01-equivalent.html  overhead-2026-06-01-equivalent.json  overhead-2026-06-01.html  overhead-2026-06-01.json
docs/extensions/: configuration.md  core-patches.md  headless-mode.md  plugin-development.md  restart-refresh.md  snail-integration.md  testing-guide.md
docs/internal/: README.md  mascot-rendering.md  skillsync-plan.md  skillsync-templates.md
examples/: poc_search.rs  turso_vector_probe.rs
examples/custom_agents/: antigravity.toml
k8s/: snail-tmux.yaml
scripts/: autx  bench-overhead.sh  check-and-patch.sh  cu  cu-queue  cu-wait  cutx  exit-claude  install-remote.sh  install.sh  make-blog-deck.py  make-blog-plots.py  make-overhead-report.py  memory_profile.sh  patch-claude.sh  render-ansi.py  restart-claude  trigger-restart.sh  uninstall.sh  unleash  unleash-exit  unleash-refresh  unleashtx  unpatch-claude.sh  wrapper.sh
scripts/demo/: install-splash.tape
scripts/lib/: onboarding.sh  recolor.py  splash.sh
scripts/patches/: README.md
src/: agents.rs  ansi.rs  app.rs  auth.rs  cli.rs  config.rs  embedded_versions.json  head_customization.rs  hooks.rs  hyprland.rs  identity.rs  input.rs  json_output.rs  launcher.rs  lib.rs  main.rs  mascot.rs  pane.rs  patcher.rs  pixel_art.rs  polyfill.rs  progress.rs  sandbox.rs  search.rs  sprite_cache.rs  text_input.rs  theme.rs  tmux.rs  token_count.rs  updater.rs  version.rs
src/assets/: ct4-left.ans  ct4-right.ans  mascot.claude.ans  mascot.codex.ans  mascot.gemini.ans  mascot.opencode.ans
tests/: README.md  auto_mode_loop.rs  character_identity_transport.rs  crossload_runtime.rs  custom_agents.rs  doctor_integration_tests.rs  profile_integration_tests.rs  signal_forwarding.rs  test-autx.sh  test-boring-install.sh  test-cutx.sh  test-headless.sh  test-install.sh  test-patches.sh  test-plugins.sh  test-unleashtx.sh  test_auth_check.sh  test_auth_check_comprehensive.sh  test_docs_drift.sh  test_sandbox_network.sh  test_skillsync.sh  test_supercompact.sh  test_ucf_live.sh
tui/: Cargo.toml
(+216 files in other folders)
